School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_complets/test_complet_affect.deca
{
    int a = 10;
    float b = 5.0;
    boolean c = true;

    a = a + 2;
    b = b * 1.5;
    c = a > b;

    println("a: ", a);
    println("b: ", b);
    //println("c: ", c);
}