School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_object/wrongReturnType.deca
// Description:
//    Programme qui retourne un mauvais type
//
// Resultats:
//    1
//
// Historique:
//    cree le 22/12/2023

class A {
	int x;

	int getX(){
	    float f = 10.0;
	    return f;
	}
}

{
    A a = new A();
    float f = a.getX();
    int i = a.getX();
}